# motionPlan

./: .gitignore  readme.md  test_angle.py  test_pose.py
src/: realtime_plot.py  realtime_plot_inAll.py
src/manipulator_driver_sim/: package.xml  setup.cfg  setup.py
src/manipulator_driver_sim/config/: ros2_controllers.yaml  ros2_vel_ctrl.yaml
src/manipulator_driver_sim/launch/: sim_gazebo.launch.py  sim_rviz.launch.py  sim_with_controller.launch.py
src/manipulator_driver_sim/manipulator_driver_sim/: move2pose_server.py  my_controller.py
src/manipulator_driver_sim/rviz/: view_robot.rviz
src/manipulator_driver_sim/srv/: SetJointTarget.srv
src/manipulator_driver_sim/urdf/: manipulator_gazebo.xacro  manipulator_main.urdf.xacro  manipulator_model2.urdf.xacro  manipulator_transmission.xacro
src/manipulator_interfaces/: CMakeLists.txt  package.xml
